--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       APP_ENV: "prod"
       APP_SECRET: "{put_something_random_here}"
       ELASTICSEARCH_HOSTS: "elasticsearch"
+      APACHE_RUN_USER: "#{local_user_id_with_permissions_to_documents_folder}"
     volumes:
       - {path_to_your_documents}:/documents:ro
     ports:
